--- a/src/global.less
+++ b/src/global.less
@@ -55,3 +55,12 @@ ol {
     min-height: 100vh;
   }
 }
+
+span.ant-table-cell-content {
+  font-weight: bold;
+}
+
+span.statistic-today-increase {
+  color: red;
+  font-size: 10px;
+}
