--- a/src/pages/Operation/BProduct/index.less
+++ b/src/pages/Operation/BProduct/index.less
@@ -49,3 +49,16 @@
     color: @primary-color;
   }
 }
+
+.row-dragging {
+  background: #fafafa;
+  border: 1px solid #ccc;
+}
+
+.row-dragging td {
+  padding: 16px;
+}
+
+.row-dragging .drag-visible {
+  visibility: visible;
+}
