💥 feat(产品): 修改首页table列样式,修改快照分页数目

--- a/src/pages/Operation/BProduct/index.less
+++ b/src/pages/Operation/BProduct/index.less
@@ -62,3 +62,15 @@
 .row-dragging .drag-visible {
   visibility: visible;
 }
+
+.blue {
+  background: #d6eaf6;
+}
+
+.blue2 {
+  background: #e7faed;
+}
+
+.red {
+  background: #ff5845;
+}
