--- a/src/global.less
+++ b/src/global.less
@@ -60,6 +60,11 @@ span.ant-table-cell-content {
   font-weight: bold;
 }
 
+span.statistic-total-increase {
+  color: royalblue;
+  font-size: 10px;
+}
+
 span.statistic-today-increase {
   color: red;
   font-size: 10px;
