--- a/src/pages/Borrow/BorrowList/style.less
+++ b/src/pages/Borrow/BorrowList/style.less
@@ -33,6 +33,13 @@
   }
 }
 
+.ant-pro-page-container-extraContent {
+  flex: 0 1 auto;
+  min-width: 242px;
+  margin-inline-start: 24px;
+  text-align: end;
+}
+
 .pageHeader {
   :global {
     .ant-page-header-heading-extra > * + * {
@@ -43,7 +50,8 @@
   .moreInfo {
     display: flex;
     justify-content: space-between;
-    width: 236px;
+    width: 436px;
+    margin-left: -80px;
   }
 }
 
